rounding on small screen fix

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -141,6 +141,10 @@
   .featured-video-plus {
     margin-bottom: 1rem;
     border-radius: .25rem;
+
+    @include small {
+      border-radius: 0;
+    }
   }
 }
 
